# otus-cpp-basics

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  guess_number.cpp  main.cpp
HW_2/: CMakeLists.txt
HW_2/headers/: functions.h
HW_3/: CMakeLists.txt  guess_number.cpp
HW_5/: CMakeLists.txt  main.cpp
HW_5/source/: statistics.cpp
HW_6/: CMakeLists.txt  main.cpp
HW_6/headers/: array_ptr.h  double_linked_list.h  simple_vector.h  single_linked_list.h
HW_7/: CMakeLists.txt  main.cpp
HW_7/source/: test_SimpleVector.cpp  test_SingleLinkedList.cpp
headers/: GuessNumberGame.h  binary_search.h
source/: GuessNumberGame.cpp  binary_search.cpp  functions.cpp
